<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HeadHunter Test Job</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_fullname">ФИО</string>
    <string name="hint_phone">Номер телефона</string>
    <string name="hint_email">Электронная почта</string>
    <string name="hint_dateOfBirth">Дата рождения</string>
    <string name="hint_gender">Пол</string>
    <string name="hint_position">Должность</string>
    <string name="hint_salary">Зарплата</string>
    <string-array name="gender_list">
        <item>Муж.</item>
        <item>Жен.</item>
    </string-array>
    <string name="button_sendCV">Отправить резюме</string>
    <string name="label_fullname">ФИО</string>
    <string name="label_phone">Телефон</string>
    <string name="label_email">Email</string>
    <string name="label_dateOfBirth">Дата рождения</string>
    <string name="label_gender">Пол</string>
    <string name="label_position">Должность</string>
    <string name="label_salary">Зарплата</string>
    <string name="title_exit">Выйти из приложения?</string>
    <string name="message_exit">Вы действительно хотите выйти?</string>
    <string name="label_answer">Ответ соискателю</string>
    <string name="button_sendAnswer">Отправить ответ</string>
    <string name="title_aswer">Ответ работодателя</string>

</resources>
