<?xml version="1.0" encoding="utf-8" ?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        >
    <LinearLayout android:id="@+id/linearLayout"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical" android:padding="5dp">
        <EditText android:id="@+id/fullnameEditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:imeOptions="actionNext"
                  android:hint="@string/hint_fullname"
                  android:inputType="textPersonName|textCapWords" />
        <!--<EditText android:id="@+id/dateOfBirthEditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/hint_dateOfBirth"
                android:inputType="none"/>-->
        <LinearLayout android:id="@+id/dateTableRow"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/dateOfBirthLabelTextView"
                style="@style/ContactLabelTextView"
                android:text="@string/label_dateOfBirth"></TextView>
            <TextView android:id="@+id/dateOfBirthSelectTextView"
                android:layout_width="match_parent"
                style="@style/ContactTextView"></TextView>
        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  style="@style/ContactLabelTextView"
                   android:text="@string/label_gender"/>
        <Spinner android:id="@+id/genderSpiner"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:entries="@array/gender_list"
                  android:hint="@string/hint_gender"/>
        </LinearLayout>
        <EditText android:id="@+id/positionEditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:imeOptions="actionNext"
                  android:hint="@string/hint_position"
                  android:inputType="text|textCapSentences" />
        <EditText android:id="@+id/salaryEditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:imeOptions="actionNext"
                  android:hint="@string/hint_salary"
                  android:inputType="numberDecimal" />
        <EditText android:id="@+id/phoneEditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:imeOptions="actionNext"
                  android:hint="@string/hint_phone"
                  android:inputType="phone" />
        <EditText android:id="@+id/emailEditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:imeOptions="actionDone"
                  android:hint="@string/hint_email"
                  android:inputType="textEmailAddress" />
        <Button android:id="@+id/sendCVButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_sendCV" />
    </LinearLayout>
</ScrollView>